--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "moduleResolution": "node",
     "target": "es2017",
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
 
   },
   "include": [
