--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prestart": "tsc",
     "start": "node --expose-gc ./bench.js",
     "pretest": "tsc",
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/bajtos/async-frameworks#readme",
   "dependencies": {
+    "@hapi/hapi": "^20.0.1",
     "@loopback/core": "^2.11.0",
     "@loopback/repository": "^3.1.0",
     "@loopback/rest": "^8.0.0",
@@ -27,13 +28,13 @@
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "fastify": "^3.7.0",
-    "hapi": "^17.0.0-rc9",
     "koa": "^2.13.0",
     "koa-router": "^9.4.0",
     "loopback": "^3.27.0",
     "loopback-connector-mongodb": "^5.4.0",
     "mocha": "^8.2.0",
     "mongodb": "^3.6.2",
+    "sails": "^1.4.0",
     "supertest": "^5.0.0",
     "typescript": "^4.0.3"
   }
