--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "A benchmark comparing performance of async/await in different HTTP frameworks",
   "scripts": {
-    "prestart": "tsc",
+    "tsc-build": "tsc --build ./src/nest-tsconfig.json && tsc --build ./src/loopback-next-tsconfig.json",
+    "prestart": "npm run tsc-build",
     "start": "node --expose-gc ./bench.js",
-    "pretest": "tsc",
+    "pretest": "npm run tsc-build",
     "test": "mocha --exit"
   },
   "repository": {
@@ -23,6 +24,11 @@
     "@loopback/core": "^2.11.0",
     "@loopback/repository": "^3.1.0",
     "@loopback/rest": "^8.0.0",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/mongoose": "^7.0.2",
+    "@nestjs/platform-express": "^7.4.4",
+    "@types/mongoose": "^5.7.36",
     "autocannon": "^6.5.0",
     "byline": "^5.0.0",
     "express": "^4.17.1",
@@ -34,6 +40,8 @@
     "loopback-connector-mongodb": "^5.4.0",
     "mocha": "^8.2.0",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.10",
+    "restify": "^8.5.1",
     "sails": "^1.4.0",
     "supertest": "^5.0.0",
     "typescript": "^4.0.3"
