--- a/src/loopback-next-tsconfig.json
+++ b/src/loopback-next-tsconfig.json
@@ -6,7 +6,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
 
-    "outDir": "lib",
+    "outDir": "../lib",
 
     "lib": ["es2018", "dom"],
     "module": "commonjs",
@@ -19,6 +19,6 @@
 
   },
   "include": [
-    "src/loopback-next.ts"
+    "loopback-next.ts"
   ]
 }
